--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -10,3 +10,24 @@ img {
 	width: 100%;
 	height: 100%;
 }
+
+.box {}
+
+/***
+* Flexbox Sticky Footer
+* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
+***/
+
+/*corrects IE min-height bug*/
+html { display: flex;}
+body { width: 100%;}
+
+.sfooter {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.sfooter-content {
+	flex: 1 0 auto;
+}
